syntax = "proto3";

package inventory;

option csharp_namespace = "ApiGateway.InventoryProtoService";

service InventoryGrpc {
  rpc AddMovement(MovementMessage) returns (MovementMessage);
  rpc GetAllMovements(Empty) returns (MovementsProto);
  rpc GetMovementByProductId(ProductIdMessage) returns (MovementsProto);
}

message Empty {

}

message MovementMessage {
  int32 id = 1;
  string date = 2;
  string type = 3;
  int32 item_id = 4;
  int32 quantity = 5;
  double unit_price = 6;
  double total_price = 7;
  string detail = 8;
}

message ProductIdMessage {
  int32 product_id = 1;
}

message MovementsProto {
	repeated MovementMessage movements = 1;
}